# linux-jagex-launcher

./: Cargo.toml  README.md
src/: client.rs  daemon.rs  forwarder.html  game_session.rs  main.rs  xdg.rs
src/daemon/: common.rs  consent_client.rs  game_session.rs  jagex_oauth.rs  launcher_client.rs
