[package]
name = "osrs-launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "4.4.2"
interprocess = "1.2.1"
serde_json = "1.0.107"
serde = "1.0.188"
reqwest = "0.11.20"
url = "2.4.1"

[patch.crates-io]
oauth2 = { git = "https://github.com/aitoiaita/oauth2-rs.git" }
