[package]
name = "osrs-launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "4.4.2"
interprocess = "1.2.1"
serde_json = "1.0.107"
serde = "1.0.188"
reqwest = { version = "0.11.20", features = ["json"] }
url = "2.4.1"
chrono = { version = "0.4.31", features = ["serde"] }
rand = "0.8.5"
tiny_http = "0.12.0"
form_urlencoded = "1.2.0"
base64 = "0.21.4"
clap = { version = "4.4.6", features = ["derive"] }
sysinfo = "0.29.10"
fork = "0.1.22"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-appender = "0.2.2"

[patch.crates-io]
oauth2 = { git = "https://github.com/aitoiaita/oauth2-rs.git" }
